--- a/style.css
+++ b/style.css
@@ -46,3 +46,9 @@ Description: Twenty Twenty-Four is designed to be flexible, versatile and applic
 h2.wp-block-post-title {
     width: 200px !important;
 }
+
+.entry-content.wp-block-post-content > :first-child {
+    display: none;
+}
+
+
